[gd_scene load_steps=18 format=3 uid="uid://d2s53txwsqj4v"]

[ext_resource type="Script" path="res://Script/play_scene.gd" id="1_gfd0d"]
[ext_resource type="FontFile" uid="uid://du5po75t5by2" path="res://Resource/Font/汉仪洛天依体简.ttf" id="2_ckpc2"]
[ext_resource type="Texture2D" uid="uid://cpgsf8udt415i" path="res://Resource/Img/17.png" id="2_rnm7q"]
[ext_resource type="Script" path="res://Script/DecisionLine.gd" id="4_03xr8"]
[ext_resource type="Texture2D" uid="uid://da2mk8cctwkyq" path="res://Resource/Img/DecisionLine.png" id="4_i0p33"]
[ext_resource type="PackedScene" uid="uid://dtjft5oel4a0q" path="res://Scene/WidgetScene/click_area.tscn" id="7_ed5i2"]
[ext_resource type="Script" path="res://Script/KillArea.gd" id="7_hnfqe"]

[sub_resource type="Animation" id="Animation_t3vn0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ymvd8"]
resource_name = "fadeout"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 0.241484),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 4.14106),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62xos"]
_data = {
"RESET": SubResource("Animation_t3vn0"),
"fadeout": SubResource("Animation_ymvd8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otg03"]
size = Vector2(1093.91, 25.862)

[sub_resource type="Animation" id="Animation_3ntuo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c1akg"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74ewe"]
_data = {
"RESET": SubResource("Animation_3ntuo"),
"fade_out": SubResource("Animation_c1akg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4f6r"]
size = Vector2(424, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjtc1"]
size = Vector2(410, 7.5)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dsd7j"]
color = Color(0.4, 0.8, 1, 1)
thickness = 5

[node name="PlayScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_gfd0d")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -577.0
offset_top = -325.0
offset_right = 577.0
offset_bottom = 396.0
texture = ExtResource("2_rnm7q")
expand_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.45098)
offset_left = -580.0
offset_top = -327.0
offset_right = 579.0
offset_bottom = 328.0

[node name="BackPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -199.0
offset_top = -324.0
offset_right = -159.0
offset_bottom = -284.0

[node name="PanelD" type="Panel" parent="BackPanel"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 505.0

[node name="PanelJ" type="Panel" parent="BackPanel"]
layout_mode = 0
offset_left = 200.0
offset_right = 300.0
offset_bottom = 505.0

[node name="PanelF" type="Panel" parent="BackPanel"]
layout_mode = 0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 505.0

[node name="PanelK" type="Panel" parent="BackPanel"]
layout_mode = 0
offset_left = 301.0
offset_right = 401.0
offset_bottom = 505.0

[node name="PanelBotton" type="Panel" parent="BackPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 512.0
offset_right = 401.0
offset_bottom = 689.0

[node name="MenuButton" type="Button" parent="."]
offset_left = -546.0
offset_top = -303.0
offset_right = -493.0
offset_bottom = -267.0
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 30
text = " 菜单 Menu "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -515.0
offset_top = -145.0
offset_right = -265.0
offset_bottom = 89.0

[node name="MissingHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="MissingCount" type="Label" parent="VBoxContainer/MissingHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 27
text = "MISSING"

[node name="MissingCountLineEdit" type="LineEdit" parent="VBoxContainer/MissingHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 25
text = "0"
editable = false

[node name="PerfectHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="PerfectCount" type="Label" parent="VBoxContainer/PerfectHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 27
text = "PERFECT"

[node name="PerfectCountLineEdit" type="LineEdit" parent="VBoxContainer/PerfectHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 25
text = "0"
editable = false

[node name="GoodHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="GoodCount" type="Label" parent="VBoxContainer/GoodHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 27
text = "GOOD"

[node name="GoodCountLineEdit" type="LineEdit" parent="VBoxContainer/GoodHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 25
text = "0"
editable = false

[node name="PlayPanel" type="Panel" parent="."]
process_mode = 1
self_modulate = Color(1, 1, 1, 0)
offset_left = -199.0
offset_top = -332.0
offset_right = 201.0
offset_bottom = 344.0

[node name="TipLabel" type="Label" parent="PlayPanel"]
layout_mode = 0
offset_top = 76.0
offset_right = 399.0
offset_bottom = 163.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayPanel/TipLabel"]
libraries = {
"": SubResource("AnimationLibrary_62xos")
}

[node name="Separators" type="Control" parent="PlayPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VSeparator" type="VSeparator" parent="PlayPanel/Separators"]
layout_mode = 0
offset_left = -34.0
offset_top = -620.0
offset_right = 34.0
offset_bottom = 800.0

[node name="VSeparator2" type="VSeparator" parent="PlayPanel/Separators"]
layout_mode = 0
offset_left = 366.0
offset_top = -620.0
offset_right = 434.0
offset_bottom = 807.0

[node name="VSeparator3" type="VSeparator" parent="PlayPanel/Separators"]
layout_mode = 0
offset_left = 164.0
offset_top = -622.0
offset_right = 232.0
offset_bottom = 800.0

[node name="VSeparator4" type="VSeparator" parent="PlayPanel/Separators"]
layout_mode = 0
offset_left = 65.0
offset_top = -621.0
offset_right = 133.0
offset_bottom = 798.0

[node name="VSeparator5" type="VSeparator" parent="PlayPanel/Separators"]
layout_mode = 0
offset_left = 266.0
offset_top = -625.0
offset_right = 334.0
offset_bottom = 802.0

[node name="Notes" type="Node2D" parent="PlayPanel"]
position = Vector2(200, 332)

[node name="DecisionLine" type="Area2D" parent="PlayPanel"]
position = Vector2(200, 519)
scale = Vector2(0.368403, 0.58)
script = ExtResource("4_03xr8")
metadata/_edit_group_ = true

[node name="DecisionBox" type="CollisionShape2D" parent="PlayPanel/DecisionLine"]
position = Vector2(-1.35724, 106.034)
shape = SubResource("RectangleShape2D_otg03")

[node name="DecisionLineImg" type="Sprite2D" parent="PlayPanel/DecisionLine"]
position = Vector2(-1.35719, -3.44823)
scale = Vector2(1.01288, 0.724138)
texture = ExtResource("4_i0p33")

[node name="MissingLabel" type="Label" parent="PlayPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 138.0
offset_top = 202.0
offset_right = 200.0
offset_bottom = 229.0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 18
text = "MISSING"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayPanel/MissingLabel"]
libraries = {
"": SubResource("AnimationLibrary_74ewe")
}

[node name="ClickBoxs" type="Node2D" parent="PlayPanel"]

[node name="ClickArea" parent="PlayPanel/ClickBoxs" instance=ExtResource("7_ed5i2")]
position = Vector2(50, 517)
POS = "D"

[node name="ClickArea2" parent="PlayPanel/ClickBoxs" instance=ExtResource("7_ed5i2")]
position = Vector2(149, 517)
POS = "F"

[node name="ClickArea3" parent="PlayPanel/ClickBoxs" instance=ExtResource("7_ed5i2")]
position = Vector2(250, 517)
POS = "J"

[node name="ClickArea4" parent="PlayPanel/ClickBoxs" instance=ExtResource("7_ed5i2")]
position = Vector2(351, 517)
POS = "K"

[node name="KillArea" type="Area2D" parent="."]
position = Vector2(2, 341)
script = ExtResource("7_hnfqe")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("RectangleShape2D_t4f6r")

[node name="MenuPanel" type="Panel" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 0.705882)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -324.0
offset_right = 578.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="HBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -483.0
offset_top = -37.0
offset_right = 483.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="HomeButton" type="Button" parent="MenuPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 30
text = "  结束 FINISH  "

[node name="ViewButton" type="Button" parent="MenuPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 30
text = "  查看谱面 VIEW FILE  "

[node name="ResumeButton" type="Button" parent="MenuPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 30
text = "  继续 RESUME  "

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StartAudArea2D" type="Area2D" parent="."]
position = Vector2(1, -645)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartAudArea2D"]
shape = SubResource("RectangleShape2D_xjtc1")

[node name="Label" type="Label" parent="."]
offset_left = 429.0
offset_top = 293.0
offset_right = 479.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 17
text = "phara:"

[node name="PharaLineEdit" type="LineEdit" parent="."]
offset_left = 494.0
offset_top = 291.0
offset_right = 561.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 15
editable = false

[node name="LoadingPanel" type="Panel" parent="."]
visible = false
offset_left = -578.0
offset_top = -328.0
offset_right = 584.0
offset_bottom = 329.0

[node name="ProgressBar" type="ProgressBar" parent="LoadingPanel"]
layout_mode = 0
offset_left = -3.0
offset_top = 420.0
offset_right = 1161.0
offset_bottom = 464.0
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_colors/font_outline_color = Color(0.4, 0.8, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ckpc2")
theme_override_font_sizes/font_size = 30
theme_override_styles/fill = SubResource("StyleBoxLine_dsd7j")
step = 1.0

[connection signal="button_down" from="MenuButton" to="." method="_on_menu_button_button_down"]
[connection signal="body_entered" from="PlayPanel/DecisionLine" to="PlayPanel/DecisionLine" method="_on_body_entered"]
[connection signal="body_exited" from="PlayPanel/DecisionLine" to="PlayPanel/DecisionLine" method="_on_body_exited"]
[connection signal="body_entered" from="KillArea" to="KillArea" method="_on_body_entered"]
[connection signal="button_down" from="MenuPanel/Buttons/HomeButton" to="." method="_on_home_button_button_down"]
[connection signal="button_down" from="MenuPanel/Buttons/ViewButton" to="." method="_on_view_button_button_down"]
[connection signal="button_down" from="MenuPanel/Buttons/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="body_entered" from="StartAudArea2D" to="." method="_on_start_aud_area_2d_body_entered"]
